--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ mod_id=zorncominers
 minecraft_version=1.19.2
 mappings_version=1.19.2
 forge_version=43.2.8
+parchment_version=2022.11.27-1.19.2
 mod_version=1.0.0-release.1
 
 # Dependencies and Libs
